Nacitavanie rozmerov mapy v observerovi.

--- a/zaznamy/01/stderr.1
+++ b/zaznamy/01/stderr.1
@@ -21,3 +21,8 @@ START pid=9421, seed=1967354337
 START pid=9447, seed=964053370
 START pid=9478, seed=2906428982
 START pid=9497, seed=356114754
+START pid=9923, seed=3089804256
+START pid=10187, seed=3147409264
+START pid=10292, seed=583119060
+START pid=10312, seed=3776426056
+START pid=10365, seed=3218238826
